--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -16,9 +16,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup PowerShell
-        uses: PowerShell/actions-setup@v2
-        with:
-          pwsh: '7.3.0'
+        run: |
+          sudo apt-get update && sudo apt-get install -y powershell || true
+          which pwsh || echo "pwsh already available on ubuntu-latest"
 
       - name: Build & Verify
         run: pwsh -File scripts/BuildAndTest.ps1
@@ -31,7 +31,7 @@ jobs:
 
       - name: Archive Compliance & Tamper Logs
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: compliance-logs
           path: |
@@ -43,14 +43,14 @@ jobs:
 
       - name: Upload Static Analysis Report
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: cppcheck-report
           path: build/cppcheck_report.xml
 
       - name: Merkle Regression Artifact
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: merkle-regression
           path: logs/compliance/merkle_regression_event.json
