--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,22 @@
 # Keep evidence capsules byte-for-byte stable across platforms (no EOL normalization)
 # This prevents CRLF/LF conversion from invalidating stored SHA256 manifests.
 evidence/** -text
+
+* text=auto eol=lf
+*.md text eol=lf
+*.json text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.sh text eol=lf
+*.py text eol=lf
+*.html text eol=lf
+*.css text eol=lf
+*.js text eol=lf
+*.ts text eol=lf
+*.mmd text eol=lf
+*.png binary
+*.jpg binary
+*.gif binary
+*.ico binary
+*.zip binary
+*.skill binary
